--- a/templates/index.html
+++ b/templates/index.html
@@ -4,30 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.0/socket.io.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}" defer></script>
 </head>
 <body>
-    <h2>Real-Time Chat</h2>
-    <div id="chat"></div>
-    <input id="message" type="text" placeholder="Type a message">
-    <button onclick="sendMessage()">Send</button>
-
-    <script>
-        const socket = io();
-
-        socket.on("message", function(msg) {
-            const chat = document.getElementById("chat");
-            const messageElement = document.createElement("p");
-            messageElement.innerText = msg;
-            chat.appendChild(messageElement);
-        });
-
-        function sendMessage() {
-            const messageInput = document.getElementById("message");
-            const message = messageInput.value;
-            socket.send(message);
-            messageInput.value = "";
-        }
-    </script>
+    <div id="chat-container">
+        <h2>Chat Room</h2>
+        <div id="messages"></div>
+        <input type="text" id="message" placeholder="Type a message..." autocomplete="off">
+        <button onclick="sendMessage()">Send</button>
+    </div>
 </body>
 </html>
