--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
 <body>
     <div id="chat-container">
         <h2>Chat Room</h2>
+        <div>
+            <input type="text" id="username" placeholder="Enter your name" autocomplete="off">
+            <button onclick="setUsername()">Set Name</button>
+        </div>
         <div id="messages"></div>
         <input type="text" id="message" placeholder="Type a message..." autocomplete="off">
         <button onclick="sendMessage()">Send</button>
