--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
+    <title>Facebug</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}" defer></script>
 </head>
 <body>
-    <div id="chat-container">
-        <h2>Chat Room</h2>
-        <div>
+    <div id="main-container">
+        <div id="username-container">
             <input type="text" id="username" placeholder="Enter your name" autocomplete="off">
             <button onclick="setUsername()">Set Name</button>
         </div>
-        <div id="messages"></div>
-        <input type="text" id="message" placeholder="Type a message..." autocomplete="off">
-        <button onclick="sendMessage()">Send</button>
+        <div id="chat-container">
+            <h2>Chat Room</h2>
+            <div id="messages"></div>
+            <input type="text" id="message" placeholder="Type a message..." autocomplete="off">
+        </div>
     </div>
 </body>
 </html>
