--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebug</title>
+    <title>FaceBug App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}" defer></script>
@@ -15,7 +15,7 @@
             <button onclick="setUsername()">Set Name</button>
         </div>
         <div id="chat-container">
-            <h2>Chat Room</h2>
+            <h2>FaceBug</h2>
             <div id="messages"></div>
             <input type="text" id="message" placeholder="Type a message..." autocomplete="off">
         </div>
